Add controller unit tests