@@ -1,5 +1,6 @@
 package com.glancy.backend.controller;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.glancy.backend.dto.FaqRequest;
 import com.glancy.backend.dto.FaqResponse;
 import com.glancy.backend.service.FaqService;
@@ -10,10 +11,10 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Collections;
+import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
@@ -22,31 +23,38 @@ class FaqControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
+
     @MockBean
     private FaqService faqService;
 
+    @Autowired
+    private ObjectMapper objectMapper;
+
     @Test
-    void testCreate() throws Exception {
+    void createFaq() throws Exception {
         FaqResponse resp = new FaqResponse(1L, "Q", "A");
         when(faqService.createFaq(any(FaqRequest.class))).thenReturn(resp);
 
+        FaqRequest req = new FaqRequest();
+        req.setQuestion("Q");
+        req.setAnswer("A");
+
         mockMvc.perform(post("/api/faqs")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content("{\"question\":\"Q\",\"answer\":\"A\"}"))
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(req)))
                 .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.id").value(1))
+                .andExpect(jsonPath("$.id").value(1L))
                 .andExpect(jsonPath("$.question").value("Q"))
                 .andExpect(jsonPath("$.answer").value("A"));
     }
 
     @Test
-    void testList() throws Exception {
-        when(faqService.getAllFaqs()).thenReturn(Collections.singletonList(new FaqResponse(1L, "Q", "A")));
+    void listFaqs() throws Exception {
+        FaqResponse resp = new FaqResponse(1L, "Q", "A");
+        when(faqService.getAllFaqs()).thenReturn(List.of(resp));
 
         mockMvc.perform(get("/api/faqs"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id").value(1))
-                .andExpect(jsonPath("$[0].question").value("Q"))
-                .andExpect(jsonPath("$[0].answer").value("A"));
+                .andExpect(jsonPath("$[0].id").value(1L));
     }
 }
